[package]
name = "melevo-vulkan"
version = "0.1.0"
edition = "2024"

[lib]
name = "vk"
path = "src/lib.rs"

[dependencies]
ash = {version = "0.38", features = ["loaded", "debug", "std"] }
ash-window = "0.13.0"
bitflags = "2.9.1"
melevo-utils = { path = "../melevo-utils" }
melevo-macro ={ path = "../melevo-macro" }
log.workspace = true
versions.workspace = true
winit.workspace = true